--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,10 +15,9 @@ test_script:
         # TODO: load the Greet module and write a script
         # that will throw if docs are not up-to-date with the code.
         # In other words, if Update-MarkdownHelp changes the markdown.
-         Import-Module .\Greet.psm1 -Force
-         $Files1 = gci .\docs\ -Recurse
-         Update-MarkdownHelp -Path .\docs\
-        $Files2 = gci .\docs\ -Recurse
-        if (Compare-Object $Files1 $Files2) {throw 'Docs are not up-to-date'}
+        Import-Module .\Greet.psm1 -Force
+        Update-MarkdownHelp -Path .\docs\
+        $diff = git diff
+        if ($diff) {throw "Docs not up-to-date: $diff"}
 
 
